{
  "version": 4,
  "terraform_version": "1.8.3",
  "serial": 65,
  "lineage": "190c341a-0c0f-1a63-1c3d-7f5631250f68",
  "resources": [
    {
      "module": "module.ansible",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ansible_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-091fb18314894b8c0",
            "arn": "arn:aws:ec2:ca-central-1:533267308718:instance/i-0964d0eae544a2a2a",
            "associate_public_ip_address": false,
            "availability_zone": "ca-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "staging-ansible-profile",
            "id": "i-0964d0eae544a2a2a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "staging-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08ef35f6e515ba30d",
            "private_dns": "ip-10-1-10-43.ca-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.10.43",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ce9d139e3bfa4382",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0246e13c18961475a",
            "tags": {
              "Environment": "staging",
              "Name": "staging-ansible-server"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "staging-ansible-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0db96f8344904f48c"
            ]
          },
          "dependencies": [
            "module.ansible.data.aws_ami.amazon_linux_2",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.main",
            "module.security.aws_iam_instance_profile.ansible_profile",
            "module.security.aws_iam_role.ansible_role",
            "module.security.aws_security_group.ansible"
          ]
        }
      ]
    },
    {
      "module": "module.efs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:533267308718:security-group/sg-047e089d0df89305c",
            "description": "Allow inbound NFS traffic from EKS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-047e089d0df89305c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "NFS from EKS",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-061258b0ebeb23648"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "staging-jenkins-efs-sg",
            "name_prefix": "",
            "owner_id": "533267308718",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "staging-jenkins-efs-sg"
            },
            "tags_all": {
              "Name": "staging-jenkins-efs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05c8bd7ede4de2b70"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_iam_role.eks_cluster",
            "module.eks.aws_iam_role_policy_attachment.eks_cluster_policy",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02a90350e72428b58",
            "arn": "arn:aws:ec2:ca-central-1:533267308718:elastic-ip/eipalloc-02a90350e72428b58",
            "association_id": "eipassoc-0ddb3f04c8483286b",
            "domain": "vpc",
            "id": "eipalloc-02a90350e72428b58",
            "network_border_group": "ca-central-1",
            "network_interface": "eni-06987e7f517e1e45a",
            "private_dns": "ip-10-1-1-237.ca-central-1.compute.internal",
            "private_ip": "10.1.1.237",
            "public_dns": "ec2-15-157-141-102.ca-central-1.compute.amazonaws.com",
            "public_ip": "15.157.141.102",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "staging",
              "Name": "staging-nat-eip"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "staging-nat-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:533267308718:internet-gateway/igw-00b8ad75c4282b162",
            "id": "igw-00b8ad75c4282b162",
            "owner_id": "533267308718",
            "tags": {
              "Environment": "staging",
              "Name": "staging-igw"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "staging-igw"
            },
            "vpc_id": "vpc-05c8bd7ede4de2b70"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02a90350e72428b58",
            "association_id": "eipassoc-0ddb3f04c8483286b",
            "connectivity_type": "public",
            "id": "nat-0d4609c9086e313d0",
            "network_interface_id": "eni-06987e7f517e1e45a",
            "private_ip": "10.1.1.237",
            "public_ip": "15.157.141.102",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-028498fbec0e971d1",
            "tags": {
              "Environment": "staging",
              "Name": "staging-nat-gateway"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "staging-nat-gateway"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:533267308718:route-table/rtb-09a8da6734074b82b",
            "id": "rtb-09a8da6734074b82b",
            "owner_id": "533267308718",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d4609c9086e313d0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "staging",
              "Name": "staging-private-route-table"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "staging-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-05c8bd7ede4de2b70"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:533267308718:route-table/rtb-0e5cac0145b970cef",
            "id": "rtb-0e5cac0145b970cef",
            "owner_id": "533267308718",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00b8ad75c4282b162",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "staging",
              "Name": "staging-public-route-table"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "staging-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-05c8bd7ede4de2b70"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02f26096eb810e463",
            "route_table_id": "rtb-09a8da6734074b82b",
            "subnet_id": "subnet-0246e13c18961475a"
          },
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0711b323617aca788",
            "route_table_id": "rtb-09a8da6734074b82b",
            "subnet_id": "subnet-0e8b3c5b216ca2248"
          },
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cf5b4727c1661fbc",
            "route_table_id": "rtb-0e5cac0145b970cef",
            "subnet_id": "subnet-028498fbec0e971d1"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ac30699afce5d236",
            "route_table_id": "rtb-0e5cac0145b970cef",
            "subnet_id": "subnet-0e101095ad497a41c"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:533267308718:subnet/subnet-0246e13c18961475a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.1.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0246e13c18961475a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533267308718",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "staging",
              "Name": "staging-private-subnet-1"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "staging-private-subnet-1"
            },
            "vpc_id": "vpc-05c8bd7ede4de2b70"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:533267308718:subnet/subnet-0e8b3c5b216ca2248",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.1.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e8b3c5b216ca2248",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533267308718",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "staging",
              "Name": "staging-private-subnet-2"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "staging-private-subnet-2"
            },
            "vpc_id": "vpc-05c8bd7ede4de2b70"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:533267308718:subnet/subnet-028498fbec0e971d1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-028498fbec0e971d1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "533267308718",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "staging",
              "Name": "staging-public-subnet-1"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "staging-public-subnet-1"
            },
            "vpc_id": "vpc-05c8bd7ede4de2b70"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:533267308718:subnet/subnet-0e101095ad497a41c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e101095ad497a41c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "533267308718",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "staging",
              "Name": "staging-public-subnet-2"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "staging-public-subnet-2"
            },
            "vpc_id": "vpc-05c8bd7ede4de2b70"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:533267308718:vpc/vpc-05c8bd7ede4de2b70",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-065bdaf5f26a59428",
            "default_route_table_id": "rtb-04f542ce76b42c988",
            "default_security_group_id": "sg-0941a5ecbb918b67a",
            "dhcp_options_id": "dopt-0dd220315adc19e8d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05c8bd7ede4de2b70",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04f542ce76b42c988",
            "owner_id": "533267308718",
            "tags": {
              "Environment": "staging",
              "Name": "staging-vpc"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "staging-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ansible",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:533267308718:security-group/sg-0db96f8344904f48c",
            "description": "Security group for Ansible server in staging",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0db96f8344904f48c",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.1.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "staging-ansible-sg",
            "name_prefix": "",
            "owner_id": "533267308718",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "staging",
              "Name": "staging-ansible-sg"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "staging-ansible-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05c8bd7ede4de2b70"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ansible_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.1.0.0/16"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-364065423",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0db96f8344904f48c",
            "security_group_rule_id": "sgr-039ff1b22cbe54ea0",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.ansible"
          ]
        }
      ]
    }
  ]
}